Added KffMatchesPage and Edited

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -1,3 +1,146 @@
 {
-  "services": "Services"
+  "services": "Services",
+  "activity": "Activity",
+  "visitedMatches": "matches attended",
+  "myAchievements": "My Achievements",
+  "leaderBoard": "Leader Board",
+  "phoneVerificationRequired": "Phone number verification required",
+  "welcome": "Welcome!",
+  "login": "Login",
+  "enterUsername": "Enter username",
+  "incorrectFormat": "Incorrect format",
+  "enterPassword": "Enter password",
+  "minimumThreeChars": "Minimum 3 characters",
+  "minimumSixChars": "Minimum 6 characters",
+  "password": "Password",
+  "forgotPassword": "Forgot password?",
+  "signIn": "Sign In",
+  "registration": "Registration",
+  "goVerification": "Go to verification",
+  "enterLoginHint": "Enter login",
+  "enterEmailHint": "Enter email",
+  "enterEmail": "Enter email",
+  "enterCorrectEmail": "Enter a valid email address",
+  "passwordMinSixChars": "Password must contain at least 6 characters",
+  "repeatPassword": "Repeat password",
+  "passwordsNotMatch": "Passwords do not match",
+  "enterPhone": "Enter phone number",
+  "phoneFormat": "Number must start with 7 and contain 11 digits (7XXXXXXXXXX)",
+  "enterFirstName": "Enter first name",
+  "firstNameMinChars": "First name must contain at least 2 characters",
+  "enterLastName": "Enter last name",
+  "lastNameMinChars": "Last name must contain at least 2 characters",
+  "enterPatronymic": "Enter patronymic (optional)",
+  "enterPhoneHint": "Enter phone number (7XXXXXXXXXX)",
+  "registrationSuccess": "Registration successful! Please verify your phone number",
+  "register": "Register",
+  "next": "Next",
+  "alreadyHaveAccount": "Already have an account? Sign In",
+  "usernameValidation": "Username must start with a letter and contain only letters, numbers and _",
+  "usernameMinChars": "Username must contain at least 3 characters",
+  "enterPhoneForVerification": "Enter phone number for verification code",
+  "sendSMSCode": "Send SMS code",
+  "iHaveAccount": "I have an account",
+  "somethingWentWrong": "Something went wrong",
+  "codeResentSuccessfully": "Code resent successfully",
+  "codeResendError": "Error sending code",
+  "codeVerifiedSuccessfully": "Code verified successfully!",
+  "invalidCode": "Invalid code",
+  "enterVerificationCode": "Enter verification code",
+  "codeSentToPhone": "Code sent to number",
+  "timeExpiredRequestNew": "Time expired. Request a new code",
+  "verify": "Verify",
+  "resendCode": "Resend code",
+  "backToLogin": "Back to login",
+  "news": "News",
+  "latestNews": "Latest News",
+  "newsLoadError": "Error loading news",
+  "unknownError": "Unknown error",
+  "retry": "Retry",
+  "noNewsYet": "No news yet",
+  "checkLater": "Check later",
+  "selectCategory": "Select category",
+  "dateNotSpecified": "Date not specified",
+  "today": "Today",
+  "yesterday": "Yesterday",
+  "daysAgo": "days ago",
+  "singleNewsLoadError": "Error loading news article",
+  "back": "Back",
+  "newsNotFound": "News not found",
+  "tryLater": "Try later",
+  "countries": "Countries",
+  "selectedCountry": "Selected country",
+  "saveCountryError": "Error saving country",
+  "loadingError": "Loading error",
+  "noCountriesData": "No countries data",
+  "nationalTeam": "National team",
+  "round": "Round",
+  "statistics": "Statistics",
+  "lineup": "Lineup",
+  "players": "Players",
+  "loadingErrorWithMessage": "Loading error",
+  "selectLineupTabToLoad": "Select 'Lineup' tab to load lineup",
+  "selectPlayersTabToLoad": "Select 'Player Statistics' tab to load",
+  "ballPossession": "Ball possession",
+  "shots": "Shots",
+  "shotsOnGoal": "Shots on goal",
+  "shotsOffGoal": "Shots off goal",
+  "fouls": "Fouls",
+  "yellowCards": "Yellow cards",
+  "refereeTeam": "Referee team",
+  "mainReferee": "Main referee:",
+  "firstAssistant": "1st assistant:",
+  "secondAssistant": "2nd assistant:",
+  "fourthReferee": "4th referee:",
+  "coachingStaff": "Coaching staff",
+  "headCoach": "Head coach",
+  "assistants": "Assistants",
+  "goalkeeper": "GK",
+  "goalkeeperFull": "Goalkeeper",
+  "fieldPlayer": "Field player",
+  "onTarget": "On target",
+  "passes": "Passes",
+  "offTarget": "Off target",
+  "yellows": "Yellows",
+  "offsides": "Offsides",
+  "corners": "Corners",
+  "additionalStats": "Additional statistics",
+  "home": "Home",
+  "loadingTournaments": "Loading tournaments...",
+  "pleaseWait": "Please wait",
+  "tournaments": "Tournaments",
+  "tournamentsNotFound": "No tournaments found",
+  "tournamentsLoadError": "Error loading tournaments",
+  "table": "Table",
+  "results": "Results",
+  "tableLoadError": "Error loading tournament table",
+  "matchesLoadError": "Error loading match results",
+  "selectResultsTab": "Select 'Results' tab to load matches",
+  "position": "#",
+  "team": "Team",
+  "matchesPlayed": "MP",
+  "goalsScored": "GF",
+  "points": "Pts",
+  "latestNews": "Latest News",
+  "allNews": "All News",
+  "newsNotFound": "No news found",
+  "newsLoadError": "Error loading news",
+  "nationalTeamGames": "National Team Games",
+  "allGames": "All Games",
+  "clubGames": "Club Games",
+  "loadingErrorWithMessage": "Loading error",
+  "noUpcomingMatches": "No upcoming matches",
+  "noPastMatches": "No past matches",
+  "matchesWillBeDisplayed": "Matches will be displayed when available",
+  "tournamentNotSpecified": "Tournament not specified",
+  "team1": "Team 1",
+  "team2": "Team 2",
+  "timeNotSpecified": "Time not specified",
+  "invalidFormat": "Invalid format",
+  "premierLeague": "PREMIER LEAGUE",
+  "ofKazakhstan": "of Kazakhstan",
+  "daysAgoShort": "d. ago",
+  "hoursAgoShort": "h. ago",
+  "minutesAgoShort": "min. ago",
+  "justNow": "Just now"
 }
