--- a/lib/l10n/app_kk.arb
+++ b/lib/l10n/app_kk.arb
@@ -1,3 +1,146 @@
 {
-  "services": "Services"
+  "services": "Қызметтер",
+  "activity": "Белсенділік",
+  "visitedMatches": "қаралған матчтар",
+  "myAchievements": "Менің жетістіктерім",
+  "leaderBoard": "Көшбасшылар тізімі",
+  "phoneVerificationRequired": "Телефон нөмірін растау қажет",
+  "welcome": "Қош келдіңіз!",
+  "login": "Логин",
+  "enterUsername": "Пайдаланушы атын енгізіңіз",
+  "incorrectFormat": "Қате пішім",
+  "enterPassword": "Күйт сөзді енгізіңіз",
+  "minimumThreeChars": "Кемінде 3 таңба",
+  "minimumSixChars": "Кемінде 6 таңба",
+  "password": "Күйт сөз",
+  "forgotPassword": "Күйт сөзді ұмыттыңыз ба?",
+  "signIn": "Кіру",
+  "registration": "Тіркелу",
+  "goVerification": "Растауға өту",
+  "enterLoginHint": "Логинді енгізіңіз",
+  "enterEmailHint": "Электронды поштаны енгізіңіз",
+  "enterEmail": "Электронды поштаны енгізіңіз",
+  "enterCorrectEmail": "Дұрыс электронды пошта мекенжайын енгізіңіз",
+  "passwordMinSixChars": "Күйт сөз кемінде 6 таңбаны қамтуы қажет",
+  "repeatPassword": "Күйт сөзді қайталаңыз",
+  "passwordsNotMatch": "Күйт сөздер сәйкес келмейді",
+  "enterPhone": "Телефон нөмірін енгізіңіз",
+  "phoneFormat": "Нөмір 7-ден басталуы және 11 цифрдан тұруы қажет (7XXXXXXXXXX)",
+  "enterFirstName": "Атын енгізіңіз",
+  "firstNameMinChars": "Аты кемінде 2 таңбаны қамтуы қажет",
+  "enterLastName": "Тегін енгізіңіз",
+  "lastNameMinChars": "Тегі кемінде 2 таңбаны қамтуы қажет",
+  "enterPatronymic": "Әкесінің атын енгізіңіз (міндетті емес)",
+  "enterPhoneHint": "Телефон нөмірін енгізіңіз (7XXXXXXXXXX)",
+  "registrationSuccess": "Тіркелу сәтті! Телефон нөмірін растаңыз",
+  "register": "Тіркелу",
+  "next": "Келесі",
+  "alreadyHaveAccount": "Тіркелгі бар ма? Кіру",
+  "usernameValidation": "Логин әріптен басталуы және тек әріптер, сандар және _ қамтуы қажет",
+  "usernameMinChars": "Логин кемінде 3 таңбаны қамтуы қажет",
+  "enterPhoneForVerification": "Растау коды үшін телефон нөмірін енгізіңіз",
+  "sendSMSCode": "SMS кодын жіберу",
+  "iHaveAccount": "Менде тіркелгі бар",
+  "somethingWentWrong": "Бірдеңе дұрыс емес",
+  "codeResentSuccessfully": "Код қайта жіберілді",
+  "codeResendError": "Код жіберу қатесі",
+  "codeVerifiedSuccessfully": "Код сәтті расталды!",
+  "invalidCode": "Қате код",
+  "enterVerificationCode": "Растау кодын енгізіңіз",
+  "codeSentToPhone": "Код нөмірге жіберілді",
+  "timeExpiredRequestNew": "Уақыт өтті. Жаңа код сұраңыз",
+  "verify": "Растау",
+  "resendCode": "Кодты қайта жіберу",
+  "backToLogin": "Кіруге қайту",
+  "news": "Жаңалықтар",
+  "latestNews": "Соңғы жаңалықтар",
+  "newsLoadError": "Жаңалықтарды жүктеу қатесі",
+  "unknownError": "Белгісіз қате",
+  "retry": "Қайталау",
+  "noNewsYet": "Әзінше жаңалықтар жоқ",
+  "checkLater": "Кейін тексеріңіз",
+  "selectCategory": "Категорияны таңдаңыз",
+  "dateNotSpecified": "Күні көрсетілмеген",
+  "today": "Бүгін",
+  "yesterday": "Кеше",
+  "daysAgo": "күн бұрын",
+  "singleNewsLoadError": "Жаңалықты жүктеу қатесі",
+  "back": "Артқа",
+  "newsNotFound": "Жаңалық табылмады",
+  "tryLater": "Кейін көріңіз",
+  "countries": "Елдер",
+  "selectedCountry": "Таңдалған ел",
+  "saveCountryError": "Елді сақтау қатесі",
+  "loadingError": "Жүктеу қатесі",
+  "noCountriesData": "Елдер туралы деректер жоқ",
+  "nationalTeam": "Ұлттық құрама",
+  "round": "Тур",
+  "statistics": "Статистика",
+  "lineup": "Құрам",
+  "players": "Ойыншылар",
+  "loadingErrorWithMessage": "Жүктеу қатесі",
+  "selectLineupTabToLoad": "'Құрам' қойындысын таңдаңыз",
+  "selectPlayersTabToLoad": "Ойыншылар статистикасы қойындысын таңдаңыз",
+  "ballPossession": "Доп володельство",
+  "shots": "Соққылар",
+  "shotsOnGoal": "Қақпаға соққылар",
+  "shotsOffGoal": "Қақпаның сыртына",
+  "fouls": "Бұзып кетулер",
+  "yellowCards": "Сары карточкалар",
+  "refereeTeam": "Төрешілер бригадасы",
+  "mainReferee": "Бас төреші:",
+  "firstAssistant": "1-ші көмекші:",
+  "secondAssistant": "2-ші көмекші:",
+  "fourthReferee": "4-ші төреші:",
+  "coachingStaff": "Жаттықтырушы штаб",
+  "headCoach": "Бас жаттықтырушы",
+  "assistants": "Көмекшілер",
+  "goalkeeper": "ЩҚ",
+  "goalkeeperFull": "Щанго қорғаушы",
+  "fieldPlayer": "Дала ойыншысы",
+  "onTarget": "Қақпаға",
+  "passes": "Пастар",
+  "offTarget": "Қақпаның сыртына",
+  "yellows": "Сарылар",
+  "offsides": "Офсайдтар",
+  "corners": "Көлбеу соққылар",
+  "additionalStats": "Қосымша статистика",
+  "home": "Үй беті",
+  "loadingTournaments": "Турнирлер жүктелуде...",
+  "pleaseWait": "Күтіңіз",
+  "tournaments": "Турнирлер",
+  "tournamentsNotFound": "Турнирлер табылмады",
+  "tournamentsLoadError": "Турнирлерді жүктеу қатесі",
+  "table": "Кесте",
+  "results": "Нәтижелер",
+  "tableLoadError": "Турнир кестесін жүктеу қатесі",
+  "matchesLoadError": "Матч нәтижелерін жүктеу қатесі",
+  "selectResultsTab": "'Нәтижелер' қойындысын таңдаңыз",
+  "position": "№",
+  "team": "Команда",
+  "matchesPlayed": "Ойындар",
+  "goalsScored": "Голдар",
+  "points": "Очколар",
+  "latestNews": "Соңғы жаңалықтар",
+  "allNews": "Барлық жаңалықтар",
+  "newsNotFound": "Жаңалықтар табылмады",
+  "newsLoadError": "Жаңалықтарды жүктеу қатесі",
+  "nationalTeamGames": "Ұлттық құрама ойындары",
+  "allGames": "Барлық ойындар",
+  "clubGames": "Клуб ойындары",
+  "loadingErrorWithMessage": "Жүктеу қатесі",
+  "noUpcomingMatches": "Күтілетін матчтар жоқ",
+  "noPastMatches": "Өткен матчтар жоқ",
+  "matchesWillBeDisplayed": "Матчтар қол жетімді болған кезде көрсетіледі",
+  "tournamentNotSpecified": "Турнир көрсетілмеген",
+  "team1": "Команда 1",
+  "team2": "Команда 2",
+  "timeNotSpecified": "Уақыт көрсетілмеген",
+  "invalidFormat": "Жарамсыз формат",
+  "premierLeague": "ПРЕМЬЕР ЛИГА",
+  "ofKazakhstan": "Қазақстанның",
+  "daysAgoShort": "күн бұрын",
+  "hoursAgoShort": "сағ бұрын",
+  "minutesAgoShort": "мин бұрын",
+  "justNow": "Қазір ғана"
 }
