--- a/lib/l10n/app_ru.arb
+++ b/lib/l10n/app_ru.arb
@@ -1,3 +1,146 @@
 {
-  "services": "Сервисы"
+  "services": "Сервисы",
+  "activity": "Активность",
+  "visitedMatches": "посещённых матчей",
+  "myAchievements": "Мои достижения",
+  "leaderBoard": "Список лидеров",
+  "phoneVerificationRequired": "Требуется подтверждение номера телефона",
+  "welcome": "Добро пожаловать!",
+  "login": "Логин",
+  "enterUsername": "Введите username",
+  "incorrectFormat": "Некорректный формат",
+  "enterPassword": "Введите пароль",
+  "minimumThreeChars": "Минимум 3 символа",
+  "minimumSixChars": "Минимум 6 символов",
+  "password": "Пароль",
+  "forgotPassword": "Забыли пароль?",
+  "signIn": "Войти",
+  "registration": "Регистрация",
+  "goVerification": "Пройти верификацию",
+  "enterLoginHint": "Введите логин",
+  "enterEmailHint": "Введите почту",
+  "enterEmail": "Введите email",
+  "enterCorrectEmail": "Введите корректный email адрес",
+  "passwordMinSixChars": "Пароль должен содержать минимум 6 символов",
+  "repeatPassword": "Повторите пароль",
+  "passwordsNotMatch": "Пароли не совпадают",
+  "enterPhone": "Введите номер телефона",
+  "phoneFormat": "Номер должен начинаться с 7 и содержать 11 цифр (7XXXXXXXXXX)",
+  "enterFirstName": "Введите имя",
+  "firstNameMinChars": "Имя должно содержать минимум 2 символа",
+  "enterLastName": "Введите фамилию",
+  "lastNameMinChars": "Фамилия должна содержать минимум 2 символа",
+  "enterPatronymic": "Введите отчество (необязательно)",
+  "enterPhoneHint": "Введите номер телефона (7XXXXXXXXXX)",
+  "registrationSuccess": "Регистрация успешна! Пожалуйста, подтвердите номер телефона",
+  "register": "Зарегистрировать",
+  "next": "Далее",
+  "alreadyHaveAccount": "Уже есть аккаунт? Войти",
+  "usernameValidation": "Логин должен начинаться с буквы и содержать только буквы, цифры и _",
+  "usernameMinChars": "Логин должен содержать минимум 3 символа",
+  "enterPhoneForVerification": "Ввод номера телефона для кода подтверждения",
+  "sendSMSCode": "Отправить SMS код",
+  "iHaveAccount": "У меня есть аккаунт",
+  "somethingWentWrong": "Что-то пошло не так",
+  "codeResentSuccessfully": "Код повторно отправлен",
+  "codeResendError": "Ошибка отправки кода",
+  "codeVerifiedSuccessfully": "Код подтвержден успешно!",
+  "invalidCode": "Неверный код",
+  "enterVerificationCode": "Введите код подтверждения",
+  "codeSentToPhone": "Код отправлен на номер",
+  "timeExpiredRequestNew": "Время истекло. Запросите новый код",
+  "verify": "Верифицировать",
+  "resendCode": "Отправить код повторно",
+  "backToLogin": "Назад к входу",
+  "news": "Новости",
+  "latestNews": "Последние новости",
+  "newsLoadError": "Ошибка загрузки новостей",
+  "unknownError": "Неизвестная ошибка",
+  "retry": "Повторить",
+  "noNewsYet": "Новостей пока нет",
+  "checkLater": "Проверьте позже",
+  "selectCategory": "Выберите категорию",
+  "dateNotSpecified": "Дата не указана",
+  "today": "Сегодня",
+  "yesterday": "Вчера",
+  "daysAgo": "дн. назад",
+  "singleNewsLoadError": "Ошибка загрузки новости",
+  "back": "Назад",
+  "newsNotFound": "Новость не найдена",
+  "tryLater": "Попробуйте позже",
+  "countries": "Страны",
+  "selectedCountry": "Выбрана страна",
+  "saveCountryError": "Ошибка сохранения страны",
+  "loadingError": "Ошибка загрузки",
+  "noCountriesData": "Нет данных о странах",
+  "nationalTeam": "Сборная",
+  "round": "Тур",
+  "statistics": "Статистика",
+  "lineup": "Состав",
+  "players": "Игроки",
+  "loadingErrorWithMessage": "Ошибка загрузки",
+  "selectLineupTabToLoad": "Выберите вкладку 'Состав' для загрузки состава",
+  "selectPlayersTabToLoad": "Выберите вкладку 'Статистика игроков' для загрузки",
+  "ballPossession": "Владение мячом",
+  "shots": "Удары",
+  "shotsOnGoal": "Удары в створ",
+  "shotsOffGoal": "Удары мимо",
+  "fouls": "Фолы",
+  "yellowCards": "Желтые карточки",
+  "refereeTeam": "Судейская бригада",
+  "mainReferee": "Главный судья:",
+  "firstAssistant": "1-й помощник:",
+  "secondAssistant": "2-й помощник:",
+  "fourthReferee": "4-й судья:",
+  "coachingStaff": "Тренерский штаб",
+  "headCoach": "Главный тренер",
+  "assistants": "Ассистенты",
+  "goalkeeper": "ВР",
+  "goalkeeperFull": "Вратарь",
+  "fieldPlayer": "Полевой игрок",
+  "onTarget": "В створ",
+  "passes": "Передачи",
+  "offTarget": "Мимо створа",
+  "yellows": "Желтые",
+  "offsides": "Офсайды",
+  "corners": "Угловые",
+  "additionalStats": "Дополнительная статистика",
+  "home": "Главная",
+  "loadingTournaments": "Загрузка турниров...",
+  "pleaseWait": "Пожалуйста, подождите",
+  "tournaments": "Турниры",
+  "tournamentsNotFound": "Турниры не найдены",
+  "tournamentsLoadError": "Ошибка загрузки турниров",
+  "table": "Таблица",
+  "results": "Результаты",
+  "tableLoadError": "Ошибка загрузки турнирной таблицы",
+  "matchesLoadError": "Ошибка загрузки результатов матчей",
+  "selectResultsTab": "Выберите вкладку 'Результаты' для загрузки матчей",
+  "position": "№",
+  "team": "Команда",
+  "matchesPlayed": "И",
+  "goalsScored": "Г",
+  "points": "О",
+  "latestNews": "Последние новости",
+  "allNews": "Все новости",
+  "newsNotFound": "Новости не найдены",
+  "newsLoadError": "Ошибка загрузки новостей",
+  "nationalTeamGames": "Игры сборной",
+  "allGames": "Все игры",
+  "clubGames": "Клубные игры",
+  "loadingErrorWithMessage": "Ошибка загрузки",
+  "noUpcomingMatches": "Нет предстоящих матчей",
+  "noPastMatches": "Нет прошедших матчей",
+  "matchesWillBeDisplayed": "Матчи будут отображены, когда станут доступны",
+  "tournamentNotSpecified": "Турнир не указан",
+  "team1": "Команда 1",
+  "team2": "Команда 2",
+  "timeNotSpecified": "Время не указано",
+  "invalidFormat": "Неверный формат",
+  "premierLeague": "ПРЕМЬЕР ЛИГА",
+  "ofKazakhstan": "Казахстана",
+  "daysAgoShort": "дн. назад",
+  "hoursAgoShort": "ч. назад",
+  "minutesAgoShort": "мин. назад",
+  "justNow": "Только что"
 }
