Added KffMatchesPage and Edited

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -142,5 +142,31 @@
   "daysAgoShort": "d. ago",
   "hoursAgoShort": "h. ago",
   "minutesAgoShort": "min. ago",
-  "justNow": "Just now"
+  "justNow": "Just now",
+  "nationalTeamMatches": "National Team Matches",
+  "loadingLeagues": "Loading leagues...",
+  "loadingError": "Loading error",
+  "selectNationalTeam": "Select a national team",
+  "untitled": "Untitled",
+  "future": "Future",
+  "past": "Past",
+  "players": "Players",
+  "coaches": "Coaches",
+  "noAvailableLeagues": "No available leagues",
+  "tryReloadPage": "Try reloading the page",
+  "loadingError": "Loading error",
+  "noUpcomingMatches": "No upcoming matches",
+  "noPastMatches": "No past matches",
+  "tournamentNotSpecified": "Tournament not specified",
+  "team1": "Team 1",
+  "tour": "TOUR",
+  "team2": "Team 2",
+  "noPlayers": "No players",
+  "fullName": "Full Name",
+  "club": "Club",
+  "games": "Games",
+  "clubNotSpecified": "Club not specified",
+  "noCoaches": "No coaches",
+  "positionNotSpecified": "Position not specified",
+  "nationalityNotSpecified": "Nationality not specified"
 }
