--- a/lib/l10n/app_kk.arb
+++ b/lib/l10n/app_kk.arb
@@ -142,5 +142,31 @@
   "daysAgoShort": "күн бұрын",
   "hoursAgoShort": "сағ бұрын",
   "minutesAgoShort": "мин бұрын",
-  "justNow": "Қазір ғана"
+  "justNow": "Қазір ғана",
+  "nationalTeamMatches": "Құрама матчтары",
+  "loadingLeagues": "Лигалар жүктелуде...",
+  "loadingError": "Жүктеу қатесі",
+  "selectNationalTeam": "Құраманы таңдаңыз",
+  "untitled": "Атаусыз",
+  "future": "Болашақ",
+  "past": "Өткен",
+  "players": "Ойыншылар",
+  "coaches": "Бапкерлер",
+  "noAvailableLeagues": "Қол жетімді лигалар жоқ",
+  "tryReloadPage": "Бетті қайта жүктеп көріңіз",
+  "loadingError": "Жүктеу қатесі",
+  "noUpcomingMatches": "Алда матчтар жоқ",
+  "noPastMatches": "Өткен матчтар жоқ",
+  "tournamentNotSpecified": "Турнир көрсетілмеген",
+  "team1": "1-команда",
+  "tour": "ТУР",
+  "team2": "2-команда",
+  "noPlayers": "Ойыншылар жоқ",
+  "fullName": "Т.А.Ә.",
+  "club": "Клуб",
+  "games": "Ойындар",
+  "clubNotSpecified": "Клуб көрсетілмеген",
+  "noCoaches": "Бапкерлер жоқ",
+  "positionNotSpecified": "Лауазым көрсетілмеген",
+  "nationalityNotSpecified": "Ұлты көрсетілмеген"
 }
