--- a/lib/l10n/app_ru.arb
+++ b/lib/l10n/app_ru.arb
@@ -142,5 +142,31 @@
   "daysAgoShort": "дн. назад",
   "hoursAgoShort": "ч. назад",
   "minutesAgoShort": "мин. назад",
-  "justNow": "Только что"
+  "justNow": "Только что",
+  "nationalTeamMatches": "Матчи Сборной",
+  "loadingLeagues": "Загружаем лиги...",
+  "loadingError": "Ошибка загрузки",
+  "selectNationalTeam": "Выберите сборную",
+  "untitled": "Без названия",
+  "future": "Будущие",
+  "past": "Прошлые",
+  "players": "Игроки",
+  "coaches": "Тренеры",
+  "noAvailableLeagues": "Нет доступных лиг",
+  "tryReloadPage": "Попробуйте обновить страницу",
+  "loadingError": "Ошибка загрузки",
+  "noUpcomingMatches": "Нет предстоящих матчей",
+  "noPastMatches": "Нет прошедших матчей",
+  "tournamentNotSpecified": "Турнир не указан",
+  "team1": "Команда 1",
+  "tour": "ТУР",
+  "team2": "Команда 2",
+  "noPlayers": "Нет игроков",
+  "fullName": "ФИО",
+  "club": "Клуб",
+  "games": "Игр",
+  "clubNotSpecified": "Клуб не указан",
+  "noCoaches": "Нет тренеров",
+  "positionNotSpecified": "Должность не указана",
+  "nationalityNotSpecified": "Национальность не указана"
 }
