Added KffMatchesPage and Edited

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -168,5 +168,37 @@
   "clubNotSpecified": "Club not specified",
   "noCoaches": "No coaches",
   "positionNotSpecified": "Position not specified",
-  "nationalityNotSpecified": "Nationality not specified"
+  "nationalityNotSpecified": "Nationality not specified",
+  "clubMatches": "Club matches",
+  "tournaments": "Tournaments",
+  "future": "Future",
+  "past": "Past",
+  "matchesLoadingError": "Error loading matches",
+  "noUpcomingMatches": "No upcoming matches",
+  "noPastMatches": "No past matches",
+  "matchesWillBeDisplayed": "Matches will be displayed when available",
+  "tournament": "Tournament",
+  "team1": "Team 1",
+  "team2": "Team 2",
+  "stadiumNotSpecified": "Stadium not specified",
+  "attendance": "Attendance",
+  "matchProtocol": "Match protocol",
+  "timeNotSpecified": "Time not specified",
+  "dateNotSpecified": "Date not specified",
+  "invalidDateFormat": "Invalid date format",
+  "matchDetails": "Match details",
+  "dateAndTime": "Date and time",
+  "status": "Status",
+  "additionalInfo": "Additional information",
+  "attendanceCount": "Attendance",
+  "downloadPdf": "Download PDF",
+  "videoOverview": "Video overview",
+  "watchOnYoutube": "Watch on YouTube",
+  "scheduled": "Scheduled",
+  "finished": "Finished",
+  "canceled": "Canceled",
+  "unknown": "Unknown",
+  "stadium": "Stadium",
+  "notSpecified": "Not specified",
+  "stadiumNameNotSpecified": "Stadium name not specified"
 }
