--- a/lib/l10n/app_kk.arb
+++ b/lib/l10n/app_kk.arb
@@ -168,5 +168,37 @@
   "clubNotSpecified": "Клуб көрсетілмеген",
   "noCoaches": "Бапкерлер жоқ",
   "positionNotSpecified": "Лауазым көрсетілмеген",
-  "nationalityNotSpecified": "Ұлты көрсетілмеген"
+  "nationalityNotSpecified": "Ұлты көрсетілмеген",
+  "clubMatches": "Клубтық матчтар",
+  "tournaments": "Турнирлер",
+  "future": "Болашақ",
+  "past": "Өткен",
+  "matchesLoadingError": "Матчтарды жүктеу қатесі",
+  "noUpcomingMatches": "Алдағы матчтар жоқ",
+  "noPastMatches": "Өткен матчтар жоқ",
+  "matchesWillBeDisplayed": "Матчтар қолжетімді болғанда көрсетіледі",
+  "tournament": "Турнир",
+  "team1": "1-команда",
+  "team2": "2-команда",
+  "stadiumNotSpecified": "Стадион көрсетілмеген",
+  "attendance": "Келушілер саны",
+  "matchProtocol": "Матч хаттамасы",
+  "timeNotSpecified": "Уақыты көрсетілмеген",
+  "dateNotSpecified": "Күні көрсетілмеген",
+  "invalidDateFormat": "Күн форматы қате",
+  "matchDetails": "Матч туралы мәлімет",
+  "dateAndTime": "Күні және уақыты",
+  "status": "Мәртебе",
+  "additionalInfo": "Қосымша ақпарат",
+  "attendanceCount": "Қатысқандар саны",
+  "downloadPdf": "PDF жүктеу",
+  "videoOverview": "Бейнешолу",
+  "watchOnYoutube": "YouTube-тан көру",
+  "scheduled": "Жоспарланған",
+  "finished": "Аяқталған",
+  "canceled": "Бас тартылған",
+  "unknown": "Белгісіз",
+  "stadium": "Стадион",
+  "notSpecified": "Көрсетілмеген",
+  "stadiumNameNotSpecified": "Стадион атауы көрсетілмеген"
 }
