--- a/lib/l10n/app_ru.arb
+++ b/lib/l10n/app_ru.arb
@@ -168,5 +168,37 @@
   "clubNotSpecified": "Клуб не указан",
   "noCoaches": "Нет тренеров",
   "positionNotSpecified": "Должность не указана",
-  "nationalityNotSpecified": "Национальность не указана"
+  "nationalityNotSpecified": "Национальность не указана",
+  "clubMatches": "Клубные матчи",
+  "tournaments": "Турниры",
+  "future": "Будущие",
+  "past": "Прошлые",
+  "matchesLoadingError": "Ошибка загрузки матчей",
+  "noUpcomingMatches": "Нет предстоящих матчей",
+  "noPastMatches": "Нет прошедших матчей",
+  "matchesWillBeDisplayed": "Матчи будут отображены, когда станут доступны",
+  "tournament": "Турнир",
+  "team1": "Команда 1",
+  "team2": "Команда 2",
+  "stadiumNotSpecified": "Стадион не указан",
+  "attendance": "Посещаемость",
+  "matchProtocol": "Протокол матча",
+  "timeNotSpecified": "Время не указано",
+  "dateNotSpecified": "Дата не указана",
+  "invalidDateFormat": "Неверный формат даты",
+  "matchDetails": "Детали матча",
+  "dateAndTime": "Дата и время",
+  "status": "Статус",
+  "additionalInfo": "Дополнительная информация",
+  "attendanceCount": "Посещаемость",
+  "downloadPdf": "Скачать PDF",
+  "videoOverview": "Видеообзор",
+  "watchOnYoutube": "Смотреть на YouTube",
+  "scheduled": "Запланирован",
+  "finished": "Завершен",
+  "canceled": "Отменен",
+  "unknown": "Неизвестно",
+  "stadium": "Стадион",
+  "notSpecified": "Не указан",
+  "stadiumNameNotSpecified": "Название не указано"
 }
